[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameMenus/ShipMenuPointer.png" type="Texture" id=1]
[ext_resource path="res://GameMenus/MenuBtn.gd" type="Script" id=2]
[ext_resource path="res://GameMenus/Fonts/Kenney Rocket Square.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 3 )

[node name="MenuBtn" type="TextureButton"]
anchor_left = 0.029
anchor_top = 0.25
anchor_right = 0.029
anchor_bottom = 0.25
margin_left = -29.696
margin_top = -10.0
margin_right = 994.304
margin_bottom = 10.0
rect_min_size = Vector2( 0, 20 )
script = ExtResource( 2 )

[node name="MenuPointer" type="Sprite" parent="."]
position = Vector2( 108, 163 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 24.0
mouse_filter = 2
custom_colors/default_color = Color( 1, 0.945098, 0.909804, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Menu Button Text[/center]"
text = "Menu Button Text"

[connection signal="focus_entered" from="." to="." method="_on_MenuBtn_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_MenuBtn_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_MenuBtn_mouse_entered"]
